FIX - Tidied cosmetic details - preserve line breaks in Textract processing; - horizontal scrolling for long lines in full text div; - search button aligns properly; - tidied image details page & added table sorting; and - default data table length now fifty elements.

--- a/bcaw/static/css/theme.css
+++ b/bcaw/static/css/theme.css
@@ -16,3 +16,7 @@ body {
 .jumbotron img {
   float: left;
 }
+
+#full-text {
+  overflow-x: auto;
+}
